feat: webui新增删除QB种子功能
现在可以在webui的媒体页面和播放器页面删除对应的QB种子。方便删除不喜欢的内容
